<resources>
    <string name="app_name">MaCave</string>
    <string name="title_wine_detail">Détail du vin</string>
    <string name="number_bottle">N° Bouteilles :</string>
    <string name="add_bottle_desc">Ajouter une bouteille</string>
    <string name="remove_bottle_desc">Enlever une bouteille</string>
    <string name="wine_red">Rouge</string>
    <string name="wine_rose">Rosé</string>
    <string name="wine_paille">Vin de Paille</string>
    <string name="wine_sparkling">Mousseux</string>
    <string name="wine_cremant">Crémant</string>
    <string name="wine_champagne">Champagne</string>
    <string name="wine_white">Blanc</string>
    <string name="wine_champagne_rose">Champagne Rosé</string>
    <string name="error">Oups ! Erreur...</string>
    <string name="add_wine_error_message">Il faut renseigner au minimum le nom, le producteur et l\'origine du vin</string>
    <string name="add_wine_error_title">Oups !</string>
    <string name="ok">Ok</string>
    <string name="name">Nom</string>
    <string name="origin">Origine</string>
    <string name="producer">Producteur</string>
    <string name="search_menu">Menu de recherche</string>
    <string name="nav_cellar">Ma Cave</string>
    <string name="nav_buy_list">Liste d\'Achats</string>
    <string name="nav_all_wines">Tous les Vins </string>
    <string name="menu">Menu</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="add_buy_list_title">Plus de bouteilles</string>
    <string name="add_buy_list_mess">Ajoutez le vin à la liste des vins à racheter ?</string>
    <string name="cancel">Annuler</string>
    <string name="add_suggested_dish_title">Nouvelle suggestion de plat</string>
    <string name="dish_suggestion">Suggestions de plats :</string>
    <string name="add_cepage">Ajouter un cépage</string>
    <string name="cepage">Cépages :</string>
    <string name="m_winename">Nom</string>
    <string name="m_color">Couleur</string>
    <string name="m_origin">Origine</string>
    <string name="m_year">Année</string>
    <string name="m_producer">Producteur</string>
    <string name="m_bottlenumber">Bouteilles</string>
    <string name="m_cepage">Cépages</string>
    <string name="m_dishes">Plats</string>
    <string name="nav_drink_list">A Consommer</string>
    <string name="consumption_date">A consommer en :</string>
    <string name="m_consumption_date">Date de consommation</string>
    <string name="add">Ajouter</string>
    <string name="deletion">Suppression</string>
    <string name="wine_deletion_message">Vous êtes sur le point de supprimer un vin, êtes-vous sûr de vouloir continuer ?</string>
</resources>
