<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".CellarListActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay">
            </android.support.v7.widget.Toolbar>

            <HorizontalScrollView
                android:id="@+id/search_scrollview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="0dp"
                android:visibility="gone">

                <android.support.design.chip.ChipGroup
                    android:id="@+id/search_chipgroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:singleLine="true">

                    <android.support.design.chip.Chip
                        android:id="@+id/m_chip_name"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="true"
                        android:text="@string/m_winename"
                        android:textColor="@android:color/white"
                        app:checkedIcon="@drawable/ic_check_white_24dp"
                        app:chipBackgroundColor="@color/colorSecondary"
                        app:textStartPadding="2dp" />

                    <android.support.design.chip.Chip
                        android:id="@+id/m_chip_origin"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="true"
                        android:text="@string/m_origin"
                        android:textColor="@android:color/white"
                        app:checkedIcon="@drawable/ic_check_white_24dp"
                        app:chipBackgroundColor="@color/colorSecondary"
                        app:textStartPadding="2dp" />

                    <android.support.design.chip.Chip
                        android:id="@+id/m_chip_producer"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="true"
                        android:text="@string/m_producer"
                        android:textColor="@android:color/white"
                        app:checkedIcon="@drawable/ic_check_white_24dp"
                        app:chipBackgroundColor="@color/colorSecondary"
                        app:textStartPadding="2dp" />

                    <android.support.design.chip.Chip
                        android:id="@+id/m_chip_year"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/m_year"
                        android:textColor="@android:color/white"
                        app:checkedIcon="@drawable/ic_check_white_24dp"
                        app:chipBackgroundColor="@color/colorSecondary"
                        app:textStartPadding="2dp" />

                    <android.support.design.chip.Chip
                        android:id="@+id/m_chip_color"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/m_color"
                        android:textColor="@android:color/white"
                        app:checkedIcon="@drawable/ic_check_white_24dp"
                        app:chipBackgroundColor="@color/colorSecondary"
                        app:textStartPadding="2dp" />

                    <android.support.design.chip.Chip
                        android:id="@+id/m_chip_bottles"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/m_bottlenumber"
                        android:textColor="@android:color/white"
                        app:checkedIcon="@drawable/ic_check_white_24dp"
                        app:chipBackgroundColor="@color/colorSecondary"
                        app:textStartPadding="2dp" />

                    <android.support.design.chip.Chip
                        android:id="@+id/m_chip_cepage"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/m_cepage"
                        android:textColor="@android:color/white"
                        app:checkedIcon="@drawable/ic_check_white_24dp"
                        app:chipBackgroundColor="@color/colorSecondary"
                        app:textStartPadding="2dp" />

                    <android.support.design.chip.Chip
                        android:id="@+id/m_chip_dishes"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/m_dishes"
                        android:textColor="@android:color/white"
                        app:checkedIcon="@drawable/ic_check_white_24dp"
                        app:chipBackgroundColor="@color/colorSecondary"
                        app:textStartPadding="2dp" />

                    <android.support.design.chip.Chip
                        android:id="@+id/m_chip_consumption"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/m_consumption_date"
                        android:textColor="@android:color/white"
                        app:checkedIcon="@drawable/ic_check_white_24dp"
                        app:chipBackgroundColor="@color/colorSecondary"
                        app:textStartPadding="2dp" />

                </android.support.design.chip.ChipGroup>
            </HorizontalScrollView>

        </android.support.design.widget.AppBarLayout>



        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <include layout="@layout/cellar_list" />
        </FrameLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="8dp"
            android:tint="@android:color/white"
            android:visibility="visible"
            app:srcCompat="@android:drawable/ic_input_add" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="66dp"
            android:layout_marginBottom="8dp"
            android:tint="@android:color/white"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_edit_black_24dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabValid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="66dp"
            android:layout_marginBottom="8dp"
            android:tint="@android:color/white"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_check_white_24dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="8dp"
            android:tint="@android:color/white"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_clear_black_24dp" />
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/drawer_header"
        app:itemTextAppearance="@style/AppTheme.MenuItem"/>

</android.support.v4.widget.DrawerLayout>